--- a/presentation_report/thesis/header.sty
+++ b/presentation_report/thesis/header.sty
@@ -11,6 +11,8 @@
 \usepackage{tikz}     % needed for plot of MA and DAG (methods Experiment 1)
 \usepackage{algorithmicx} % needed for algorithms
 \usepackage{algorithm} % needed for algorithms
+% \usepackage{float}  % force figures not to float with H
+
 
 
 
