--- a/presentation_report/thesis/chapter03.Rnw
+++ b/presentation_report/thesis/chapter03.Rnw
@@ -678,7 +678,7 @@ In the observational setting, treatment was confounded by $X_1$ and $X_2$. In th
 
 In the RCT setting, treatment was randomly assigned. In the train set, $\Sexpr{round(rct_scenario1$dev_treatment_allocation[1]*100, 1)}$\% were in control and $\Sexpr{round(rct_scenario1$dev_treatment_allocation[2]*100, 1)}$\% in treatment; in the test set, the shares were $\Sexpr{round(rct_scenario1$val_treatment_allocation[1]*100, 1)}$\% and $\Sexpr{round(rct_scenario1$val_treatment_allocation[2]*100, 1)}$\%, respectively.
 
-Figure~\ref{fig:scenario1_ite_distribution_dgp} shows the true ITE distribution from the DGP, which displays some heterogeneity due to interaction effects. Figure~\ref{fig:scenario1_sampling_distributions_vertical} shows the marginal distributions of all variables in the DGP and as estimated by the TRAM-DAG. The distribution of the outcome $Y$ under $\text{do}(X_4 = 0)$ and $\text{do}(X_4 = 1)$ is shown in Figure~\ref{fig:scenario1_outcome_distributions}. The ITEs were estimated as the difference in medians of the potential outcomes. Figure~\ref{fig:scenario1_ite_densities_train_test} compares the densities of the estimated and true ITEs. In both observational and RCT settings, the estimated ITEs are close to the true ones in both train and test sets. Figure~\ref{fig:scenario1_ite_scatter_train_test} shows the scatterplots of estimated vs. true ITEs. Figure~\ref{fig:scenario1_ite_cATE} shows the ITE-ATE plots, where ATE is calculated as the median difference in observed outcomes within ITE subgroups. The trends are similar across train and test sets.
+Figure~\ref{fig:scenario1_ite_distribution_dgp} shows the true ITE distribution from the DGP, which displays some heterogeneity due to interaction effects. Figure~\ref{fig:scenario1_sampling_distributions_vertical} shows the marginal distributions of all variables in the DGP and as estimated by the TRAM-DAG. The distribution of the outcome $Y$ under $\text{do}(X_4 = 0)$ and $\text{do}(X_4 = 1)$ is shown in Figure~\ref{fig:scenario1_outcome_distributions}. The ITEs were estimated as the difference in medians of the potential outcomes. Figure~\ref{fig:scenario1_ite_densities_train_test} compares the densities of the estimated and true ITEs. In both observational and RCT settings, the estimated ITEs are close to the true ones in both train and test sets. Figure~\ref{fig:scenario1_ite_scatter_train_test} shows the scatterplots of estimated vs. true ITEs. Figures~\ref{fig:observ_scenario1_ite_ATE} and \ref{fig:rct_scenario1_ite_ATE} show the ITE-ATE plots, where the ATE is calculated as the median difference in observed outcomes within ITE subgroups. The trends are similar across train and test sets.
 
 
 
@@ -763,9 +763,8 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario1_ite_distribution_dgp.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario1_ite_distribution_dgp.png}
-\caption{True ITE distribution resulting from the DGP for Scenario (1), which includes both direct and interaction effects. The true ITEs are identical for each individual in the observational and RCT settings, as they are based on the potential outcomes under both treatment conditions. Left: Observational; Right: RCT setting.}
+\includegraphics[width=0.7\textwidth]{img/results/observ_scenario1_ite_distribution_dgp.png}
+\caption{True ITE distribution resulting from the DGP for Scenario (1), which includes both direct and interaction effects. The true ITEs are identical for each individual in the observational and RCT settings, as they are based on the potential outcomes under both treatment conditions.}
 \label{fig:scenario1_ite_distribution_dgp}
 \end{figure}
 
@@ -793,8 +792,9 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario1_ITE_densities_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario1_ITE_densities_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario1_ITE_densities_train_test.png} 
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario1_ITE_densities_train_test.png}
+\vspace{-17pt}
 \caption{Densities of the estimated ITEs compared to the true ITEs in the training and test datasets for Scenario (1), which includes direct and interaction effects. Left: Observational; Right: RCT setting.}
 \label{fig:scenario1_ite_densities_train_test}
 \end{figure}
@@ -806,23 +806,41 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario1_ITE_scatter_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario1_ITE_scatter_train_test.png}
-\caption{Scatterplots of estimated ITEs versus true ITEs in the training and test datasets for Scenario (1), which includes direct and interaction effects. Left: Observational; Right: RCT setting.}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario1_ITE_scatter_train_test.png} 
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario1_ITE_scatter_train_test.png}
+\vspace{-17pt}
+\caption{Scatterplots of estimated ITEs vs. true ITEs in the training and test datasets for Scenario (1), which includes direct and interaction effects. Left: Observational; Right: RCT setting.}
 \label{fig:scenario1_ite_scatter_train_test}
 \end{figure}
 
 
 
+% 
+% \begin{figure}[htbp]
+% \centering
+% \includegraphics[width=0.45\textwidth]{img/results/observ_scenario1_ITE_ATE.png}
+% \includegraphics[width=0.45\textwidth]{img/results/rct_scenario1_ITE_ATE.png}
+% \caption{ITE-ATE plots for Scenario (1), which includes direct and interaction effects. Individuals are grouped into bins based on their estimated ITEs, and within each bin, the ATE is calculated as the difference in medians of the observed outcomes under the two treatments. 95\% bootstrap confidence intervals indicate the uncertainty. Left: Observational; Right: RCT setting.}
+% \label{fig:scenario1_ite_cATE}
+% \end{figure}
+
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario1_ITE_cATE.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario1_ITE_cATE.png}
-\caption{ITE-ATE plots for Scenario (1), which includes direct and interaction effects. Individuals are grouped into bins based on their estimated ITEs, and within each bin, the ATE is calculated as the difference in medians of the observed outcomes under the two treatments. 95\% bootstrap confidence intervals indicate the uncertainty. Left: Observational; Right: RCT setting.}
-\label{fig:scenario1_ite_cATE}
+\includegraphics[width=0.8\textwidth]{img/results/observ_scenario1_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario (1) in the observatinal setting, which includes direct and interaction effects. Individuals are grouped into bins based on their estimated ITEs, and within each bin, the ATE is calculated as the difference in medians of the observed outcomes under the two treatments. 95\% bootstrap confidence intervals indicate the uncertainty.}
+\label{fig:observ_scenario1_ite_ATE}
 \end{figure}
 
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.8\textwidth]{img/results/rct_scenario1_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario (1) in the RCT setting, which includes direct and interaction effects. Individuals are grouped into bins based on their estimated ITEs, and within each bin, the ATE is calculated as the difference in medians of the observed outcomes under the two treatments. 95\% bootstrap confidence intervals indicate the uncertainty.}
+\label{fig:rct_scenario1_ite_ATE}
+\end{figure}
 
 
 % start a new page
@@ -838,7 +856,7 @@ ATE as mean(ITE$_\text{estimated}$)
 \label{fig:ite_dag_observational_2}
 \end{figure}
 
-Scenario (2) includes a direct effect of the treatment on the outcome, while the coefficients for the interaction terms are set to zero. This results in less heterogeneity in the ITE distribution compared to Scenario (1), as shown in Figure~\ref{fig:scenario2_ite_distribution_dgp}. Why there is still some heterogeneity despite the absence of interactions is discussed in Section~\ref{sec:disc_experiment4}. The observational and interventional densities generated by the fitted TRAM-DAG closely match the true densities defined by the DGP, as illustrated in Figures~\ref{fig:scenario2_sampling_distributions_vertical} and~\ref{fig:scenario2_outcome_distributions}. However, there is a notable difference in variance between the estimated and true ITE distributions, visible in Figures~\ref{fig:scenario2_ite_densities_train_test} and~\ref{fig:scenario2_ite_scatter_train_test}. The ITE-ATE plot in Figure~\ref{fig:scenario2_ite_cATE} is less informative than in Scenario (1), as expected given the reduced heterogeneity. Table~\ref{tab:scenario2_ate_comparison} presents the ATE measures for Scenario (2). In the test set of the RCT setting, the ATE based on the true ITEs was \Sexpr{round(rct_scenario2$val_ITE_median_average, 3)}, while the ATE based on the estimated ITEs was \Sexpr{round(rct_scenario2$val_ITE_median_pred_average, 3)}.
+Scenario (2) includes a direct effect of the treatment on the outcome, while the coefficients for the interaction terms are set to zero. This results in less heterogeneity in the ITE distribution compared to Scenario (1), as shown in Figure~\ref{fig:scenario2_ite_distribution_dgp}. Why there is still some heterogeneity despite the absence of interactions is discussed in Section~\ref{sec:disc_experiment4}. The observational and interventional densities generated by the fitted TRAM-DAG closely match the true densities defined by the DGP, as illustrated in Figures~\ref{fig:scenario2_sampling_distributions_vertical} and~\ref{fig:scenario2_outcome_distributions}. However, there is a notable difference in variance between the estimated and true ITE distributions, visible in Figures~\ref{fig:scenario2_ite_densities_train_test} and~\ref{fig:scenario2_ite_scatter_train_test}. The ITE-ATE plots in Figures~\ref{fig:observ_scenario2_ite_ATE} and \ref{fig:rct_scenario2_ite_ATE} are less informative than in Scenario (1), as expected given the reduced heterogeneity. Table~\ref{tab:scenario2_ate_comparison} presents the ATE measures for Scenario (2). In the test set of the RCT setting, the ATE based on the true ITEs was \Sexpr{round(rct_scenario2$val_ITE_median_average, 3)}, while the ATE based on the estimated ITEs was \Sexpr{round(rct_scenario2$val_ITE_median_pred_average, 3)}.
 
 
 \begin{table}[htbp]
@@ -901,9 +919,8 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario2_ite_distribution_dgp.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario2_ite_distribution_dgp.png}
-\caption{True ITE distribution resulting from the DGP for Scenario~(2), which includes a direct treatment effect but no interaction effects. The true ITEs are identical in the observational and RCT settings, as they depend only on the potential outcomes under both treatment allocations. Left: Observational; Right: RCT setting.}
+\includegraphics[width=0.7\textwidth]{img/results/observ_scenario2_ite_distribution_dgp.png}
+\caption{True ITE distribution resulting from the DGP for Scenario~(2), which includes a direct treatment effect but no interaction effects. The true ITEs are identical in the observational and RCT settings, as they depend only on the potential outcomes under both treatment allocations.}
 \label{fig:scenario2_ite_distribution_dgp}
 \end{figure}
 
@@ -917,6 +934,7 @@ ATE as mean(ITE$_\text{estimated}$)
 \label{fig:scenario2_sampling_distributions_vertical}
 \end{figure}
 
+
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.45\textwidth]{img/results/observ_scenario2_X7_treatment_densities.png}
@@ -928,10 +946,13 @@ ATE as mean(ITE$_\text{estimated}$)
 
 
 
+
+
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario2_ITE_densities_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario2_ITE_densities_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario2_ITE_densities_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario2_ITE_densities_train_test.png}
+\vspace{-17pt}
 \caption{Densities of estimated ITEs compared to the true ITEs in the training and test datasets for Scenario~(2), which includes a direct treatment effect but no interaction effects. Left: Observational; Right: RCT setting.}
 \label{fig:scenario2_ite_densities_train_test}
 \end{figure}
@@ -943,8 +964,9 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario2_ITE_scatter_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario2_ITE_scatter_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario2_ITE_scatter_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario2_ITE_scatter_train_test.png}
+\vspace{-17pt}
 \caption{Scatterplots of estimated ITEs compared to the true ITEs in the training and test datasets for Scenario~(2), which includes a direct treatment effect but no interaction effects. Left: Observational; Right: RCT setting.}
 \label{fig:scenario2_ite_scatter_train_test}
 \end{figure}
@@ -954,10 +976,20 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario2_ITE_cATE.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario2_ITE_cATE.png}
-\caption{ITE-ATE plot for Scenario~(2), which includes a direct treatment effect but no interaction effects. Individuals are grouped into bins based on their estimated ITEs, and in each bin, the ATE is computed as the difference in medians of the observed outcomes under treatment and control. The 95\% bootstrap confidence intervals indicate uncertainty. Left: Observational; Right: RCT setting.}
-\label{fig:scenario2_ite_cATE}
+\includegraphics[width=0.8\textwidth]{img/results/observ_scenario2_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario~(2) in the observational setting, which includes a direct treatment effect but no interaction effects. Individuals are grouped into bins based on their estimated ITEs, and in each bin, the ATE is computed as the difference in medians of the observed outcomes under treatment and control. The 95\% bootstrap confidence intervals indicate uncertainty.}
+\label{fig:observ_scenario2_ite_ATE}
+\end{figure}
+
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.8\textwidth]{img/results/rct_scenario2_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario~(2) in the RCT setting, which includes a direct treatment effect but no interaction effects. Individuals are grouped into bins based on their estimated ITEs, and in each bin, the ATE is computed as the difference in medians of the observed outcomes under treatment and control. The 95\% bootstrap confidence intervals indicate uncertainty.}
+\label{fig:rct_scenario2_ite_ATE}
 \end{figure}
 
 
@@ -1040,8 +1072,7 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario3_ite_distribution_dgp.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario3_ite_distribution_dgp.png}
+\includegraphics[width=0.7\textwidth]{img/results/observ_scenario3_ite_distribution_dgp.png}
 \caption{True ITE distribution resulting from the DGP for Scenario~(3), which includes interaction effects but no direct treatment effect. The true ITEs are identical in the observational and RCT settings, since they are based on the potential outcomes under both treatment allocations. Left: Observational; Right: RCT setting.}
 \label{fig:scenario3_ite_distribution_dgp}
 \end{figure}
@@ -1069,8 +1100,9 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario3_ITE_densities_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario3_ITE_densities_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario3_ITE_densities_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario3_ITE_densities_train_test.png}
+\vspace{-17pt}
 \caption{Densities of estimated ITEs compared to the true ITEs in the training and test datasets for Scenario~(3), which includes interaction effects but no direct treatment effect. Left: Observational; Right: RCT setting.}
 \label{fig:scenario3_ite_densities_train_test}
 \end{figure}
@@ -1082,8 +1114,9 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario3_ITE_scatter_train_test.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario3_ITE_scatter_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/observ_scenario3_ITE_scatter_train_test.png}
+\includegraphics[width=0.33\textwidth]{img/results/rct_scenario3_ITE_scatter_train_test.png}
+\vspace{-17pt}
 \caption{Scatterplots of estimated ITEs compared to the true ITEs in the training and test datasets for Scenario~(3), which includes interaction effects but no direct treatment effect. Left: Observational; Right: RCT setting.}
 \label{fig:scenario3_ite_scatter_train_test}
 \end{figure}
@@ -1093,10 +1126,19 @@ ATE as mean(ITE$_\text{estimated}$)
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.45\textwidth]{img/results/observ_scenario3_ITE_cATE.png}
-\includegraphics[width=0.45\textwidth]{img/results/rct_scenario3_ITE_cATE.png}
-\caption{ITE-ATE plot for Scenario~(3), which includes interaction effects but no direct treatment effect. Individuals are grouped into bins based on the estimated ITE, and within each bin the ATE is computed as the difference in medians of the observed outcomes under treatment and control. 95\% bootstrap confidence intervals reflect the uncertainty. Left: Observational; Right: RCT setting.}
-\label{fig:scenario3_ite_cATE}
+\includegraphics[width=0.8\textwidth]{img/results/observ_scenario3_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario~(3) in the observational setting, which includes interaction effects but no direct treatment effect. Individuals are grouped into bins based on the estimated ITE, and within each bin the ATE is computed as the difference in medians of the observed outcomes under treatment and control. 95\% bootstrap confidence intervals reflect the uncertainty.}
+\label{fig:observ_scenario3_ite_ATE}
+\end{figure}
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.8\textwidth]{img/results/rct_scenario3_ITE_ATE.png}
+\vspace{-15pt}
+\caption{ITE-ATE plot for Scenario~(3) in the RCT setting, which includes interaction effects but no direct treatment effect. Individuals are grouped into bins based on the estimated ITE, and within each bin the ATE is computed as the difference in medians of the observed outcomes under treatment and control. 95\% bootstrap confidence intervals reflect the uncertainty.}
+\label{fig:rct_scenario3_ite_ATE}
 \end{figure}
 
 
